--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   api:
     build: .
@@ -8,11 +9,8 @@ services:
       - .:/app
     depends_on:
       - mysql
-    environment:
-      - DB_HOST=mysql
-      - DB_USER=root
-      - DB_PASS=password
-      - DB_NAME=todo_db
+    env_file:
+      - .env
 
   mysql:
     image: mysql:8
@@ -22,7 +20,7 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     ports:
-      - "3306:3306"
+      - "3307:3306"
 
 volumes:
   db_data:
