--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,27 @@ services:
   api:
     build: .
     ports:
-      - '3000:3000'
+      - "3000:3000"
     volumes:
       - .:/app
-    depends_on:
-      - mysql
     env_file:
       - .env
+    depends_on:
+      - mysql
+    restart: unless-stopped
 
   mysql:
     image: mysql:8
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: todo_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
     ports:
       - "3307:3306"
+    restart: unless-stopped
 
 volumes:
   db_data:
